Updated getEnrollmentCourseInfo